// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`create_procedure.sql > line 1 1`] = `
[
  "CALL nonexistent()",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "nonexistent",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 1 2`] = `
[
  "  -- error
CALL random()",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "random",
                  },
                },
              ],
              "location": 16,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 2 1`] = `
[
  "  -- error

CREATE FUNCTION cp_testfunc1(a int) RETURNS int LANGUAGE SQL AS $$ SELECT a $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "cp_testfunc1",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 60,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " SELECT a ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 73,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 43,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "a",
                },
              },
            ],
            "returnType": {
              "location": 56,
              "names": [
                {
                  "String": {
                    "sval": "pg_catalog",
                  },
                },
                {
                  "String": {
                    "sval": "int4",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 6 1`] = `
[
  "CREATE TABLE cp_test (a int, b text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cp_test",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "b",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 8 1`] = `
[
  "CREATE PROCEDURE ptest1(x text)
LANGUAGE SQL
AS $$
INSERT INTO cp_test VALUES (1, x);
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest1",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 32,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
INSERT INTO cp_test VALUES (1, x);
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 45,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "x",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 23 1`] = `
[
  "  -- error
CALL ptest1('a')",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "location": 23,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest1",
                  },
                },
              ],
              "location": 16,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 24 1`] = `
[
  "  -- ok
CALL ptest1('xy' || 'zzy')",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "location": 20,
                        "sval": {
                          "sval": "xy",
                        },
                      },
                    },
                    "location": 25,
                    "name": [
                      {
                        "String": {
                          "sval": "||",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "location": 28,
                        "sval": {
                          "sval": "zzy",
                        },
                      },
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest1",
                  },
                },
              ],
              "location": 13,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 25 1`] = `
[
  "  -- ok, constant-folded arg
CALL ptest1(substring(random()::numeric(20,15)::text, 1, 1))",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "FuncCall": {
                    "args": [
                      {
                        "TypeCast": {
                          "arg": {
                            "TypeCast": {
                              "arg": {
                                "FuncCall": {
                                  "funcformat": "COERCE_EXPLICIT_CALL",
                                  "funcname": [
                                    {
                                      "String": {
                                        "sval": "random",
                                      },
                                    },
                                  ],
                                  "location": 51,
                                },
                              },
                              "location": 59,
                              "typeName": {
                                "location": 61,
                                "names": [
                                  {
                                    "String": {
                                      "sval": "pg_catalog",
                                    },
                                  },
                                  {
                                    "String": {
                                      "sval": "numeric",
                                    },
                                  },
                                ],
                                "typemod": -1,
                                "typmods": [
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 20,
                                      },
                                      "location": 69,
                                    },
                                  },
                                  {
                                    "A_Const": {
                                      "ival": {
                                        "ival": 15,
                                      },
                                      "location": 72,
                                    },
                                  },
                                ],
                              },
                            },
                          },
                          "location": 75,
                          "typeName": {
                            "location": 77,
                            "names": [
                              {
                                "String": {
                                  "sval": "text",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 83,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 86,
                        },
                      },
                    ],
                    "funcformat": "COERCE_EXPLICIT_CALL",
                    "funcname": [
                      {
                        "String": {
                          "sval": "substring",
                        },
                      },
                    ],
                    "location": 41,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest1",
                  },
                },
              ],
              "location": 34,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 26 1`] = `
[
  "  -- ok, volatile arg

SELECT * FROM cp_test ORDER BY b COLLATE "C"",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 37,
                  "relname": "cp_test",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "sortClause": [
              {
                "SortBy": {
                  "location": -1,
                  "node": {
                    "CollateClause": {
                      "arg": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "String": {
                                "sval": "b",
                              },
                            },
                          ],
                          "location": 54,
                        },
                      },
                      "collname": [
                        {
                          "String": {
                            "sval": "C",
                          },
                        },
                      ],
                      "location": 56,
                    },
                  },
                  "sortby_dir": "SORTBY_DEFAULT",
                  "sortby_nulls": "SORTBY_NULLS_DEFAULT",
                },
              },
            ],
            "targetList": [
              {
                "ResTarget": {
                  "location": 30,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 30,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 41 1`] = `
[
  "CALL ptest1s('b')",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "location": 13,
                    "sval": {
                      "sval": "b",
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest1s",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 59 1`] = `
[
  "CALL ptest2()",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest2",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 63 1`] = `
[
  "TRUNCATE cp_test",
  {
    "stmts": [
      {
        "stmt": {
          "TruncateStmt": {
            "behavior": "DROP_RESTRICT",
            "relations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 9,
                  "relname": "cp_test",
                  "relpersistence": "p",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 65 1`] = `
[
  "CREATE PROCEDURE ptest3(y text)
LANGUAGE SQL
AS $$
CALL ptest1(y);
CALL ptest1($1);
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest3",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 32,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
CALL ptest1(y);
CALL ptest1($1);
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 45,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "y",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 72 1`] = `
[
  "CALL ptest3('b')",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "location": 12,
                    "sval": {
                      "sval": "b",
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest3",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 74 1`] = `
[
  "SELECT * FROM cp_test",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 14,
                  "relname": "cp_test",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 85 1`] = `
[
  "CALL ptest4a(NULL, NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "isnull": true,
                    "location": 13,
                  },
                },
                {
                  "A_Const": {
                    "isnull": true,
                    "location": 19,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest4a",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 87 1`] = `
[
  "CREATE PROCEDURE ptest4b(INOUT b int, INOUT a int)
LANGUAGE SQL
AS $$
CALL ptest4a(a, b);  -- error, not supported
$$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest4b",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 51,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "
CALL ptest4a(a, b);  -- error, not supported
",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 64,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 33,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_INOUT",
                  "name": "b",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 46,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_INOUT",
                  "name": "a",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 93 1`] = `
[
  "DROP PROCEDURE ptest4a",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "args_unspecified": true,
                  "objname": [
                    {
                      "String": {
                        "sval": "ptest4a",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 107 1`] = `
[
  "CALL ptest5(10, 'Hello', 20)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 10,
                    },
                    "location": 12,
                  },
                },
                {
                  "A_Const": {
                    "location": 16,
                    "sval": {
                      "sval": "Hello",
                    },
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 20,
                    },
                    "location": 25,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest5",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 123 1`] = `
[
  "CALL ptest6(1, 2)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 12,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 2,
                    },
                    "location": 15,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest6",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 134 1`] = `
[
  "CALL ptest7(least('a', 'b'), 'a')",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "MinMaxExpr": {
                    "args": [
                      {
                        "A_Const": {
                          "location": 18,
                          "sval": {
                            "sval": "a",
                          },
                        },
                      },
                      {
                        "A_Const": {
                          "location": 23,
                          "sval": {
                            "sval": "b",
                          },
                        },
                      },
                    ],
                    "location": 12,
                    "op": "IS_LEAST",
                  },
                },
                {
                  "A_Const": {
                    "location": 29,
                    "sval": {
                      "sval": "a",
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest7",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 138 1`] = `
[
  "CREATE PROCEDURE ptest8(x text)
BEGIN ATOMIC
END",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest8",
                },
              },
            ],
            "is_procedure": true,
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_DEFAULT",
                  "name": "x",
                },
              },
            ],
            "sql_body": {
              "List": {
                "items": [
                  {},
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 157 1`] = `
[
  "CALL ptest9(NULL)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "isnull": true,
                    "location": 12,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest9",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 159 1`] = `
[
  "CALL ptest9(1/0)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 12,
                      },
                    },
                    "location": 13,
                    "name": [
                      {
                        "String": {
                          "sval": "/",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {},
                        "location": 14,
                      },
                    },
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest9",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 161 1`] = `
[
  "  -- error

-- check named-parameter matching
CREATE PROCEDURE ptest10(OUT a int, IN b int, IN c int)
LANGUAGE SQL AS $$ SELECT b - c $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest10",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 102,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " SELECT b - c ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 115,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 77,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_OUT",
                  "name": "a",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 87,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_IN",
                  "name": "b",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 97,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_IN",
                  "name": "c",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 167 1`] = `
[
  "CALL ptest10(null, 7, 4)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "isnull": true,
                    "location": 13,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 7,
                    },
                    "location": 19,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 4,
                    },
                    "location": 22,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest10",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 173 1`] = `
[
  "CREATE PROCEDURE ptest11(a OUT int, VARIADIC b int[]) LANGUAGE SQL
  AS $$ SELECT b[1] + b[2] $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptest11",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 54,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " SELECT b[1] + b[2] ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 69,
                },
              },
            ],
            "parameters": [
              {
                "FunctionParameter": {
                  "argType": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_OUT",
                  "name": "a",
                },
              },
              {
                "FunctionParameter": {
                  "argType": {
                    "arrayBounds": [
                      {
                        "Integer": {},
                      },
                    ],
                    "location": 47,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                  "mode": "FUNC_PARAM_VARIADIC",
                  "name": "b",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 176 1`] = `
[
  "CALL ptest11(null, 11, 12, 13)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "isnull": true,
                    "location": 13,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 11,
                    },
                    "location": 19,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 12,
                    },
                    "location": 23,
                  },
                },
                {
                  "A_Const": {
                    "ival": {
                      "ival": 13,
                    },
                    "location": 27,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "ptest11",
                  },
                },
              ],
              "location": 5,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 185 1`] = `
[
  "  -- fail
drop procedure ptest10(int, int, int)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 33,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 38,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                    {
                      "TypeName": {
                        "location": 43,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 33,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 38,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 43,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "ptest10",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 186 1`] = `
[
  "  -- fail
begin",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_BEGIN",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 190 1`] = `
[
  "  -- now this would work
rollback",
  {
    "stmts": [
      {
        "stmt": {
          "TransactionStmt": {
            "kind": "TRANS_STMT_ROLLBACK",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 200 1`] = `
[
  "  -- error: not a procedure
CALL sum(1)",
  {
    "stmts": [
      {
        "stmt": {
          "CallStmt": {
            "funccall": {
              "args": [
                {
                  "A_Const": {
                    "ival": {
                      "ival": 1,
                    },
                    "location": 37,
                  },
                },
              ],
              "funcformat": "COERCE_EXPLICIT_CALL",
              "funcname": [
                {
                  "String": {
                    "sval": "sum",
                  },
                },
              ],
              "location": 33,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 201 1`] = `
[
  "  -- error: not a procedure

CREATE PROCEDURE ptestx() LANGUAGE SQL WINDOW AS $$ INSERT INTO cp_test VALUES (1, 'a') $$",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "ptestx",
                },
              },
            ],
            "is_procedure": true,
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 55,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "window",
                  "location": 68,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": " INSERT INTO cp_test VALUES (1, 'a') ",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 75,
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 210 1`] = `
[
  "ALTER PROCEDURE ptest1(text) STRICT",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "Boolean": {
                      "boolval": true,
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "strict",
                  "location": 29,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 23,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "ptest1",
                  },
                },
              ],
            },
            "objtype": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 211 1`] = `
[
  "  -- error: not a function
ALTER PROCEDURE cp_testfunc1(int) VOLATILE",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "volatile",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 61,
                },
              },
            ],
            "func": {
              "objargs": [
                {
                  "TypeName": {
                    "location": 56,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              ],
              "objfuncargs": [
                {
                  "FunctionParameter": {
                    "argType": {
                      "location": 56,
                      "names": [
                        {
                          "String": {
                            "sval": "pg_catalog",
                          },
                        },
                        {
                          "String": {
                            "sval": "int4",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                    "mode": "FUNC_PARAM_DEFAULT",
                  },
                },
              ],
              "objname": [
                {
                  "String": {
                    "sval": "cp_testfunc1",
                  },
                },
              ],
            },
            "objtype": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 212 1`] = `
[
  "  -- error: not a procedure
ALTER PROCEDURE nonexistent() VOLATILE",
  {
    "stmts": [
      {
        "stmt": {
          "AlterFunctionStmt": {
            "actions": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "volatile",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "volatility",
                  "location": 58,
                },
              },
            ],
            "func": {
              "objname": [
                {
                  "String": {
                    "sval": "nonexistent",
                  },
                },
              ],
            },
            "objtype": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 215 1`] = `
[
  "DROP FUNCTION ptest1(text)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 21,
                        "names": [
                          {
                            "String": {
                              "sval": "text",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 21,
                          "names": [
                            {
                              "String": {
                                "sval": "text",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "ptest1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_FUNCTION",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 215 2`] = `
[
  "  -- error: not a function
DROP PROCEDURE cp_testfunc1(int)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 55,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 55,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "cp_testfunc1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 216 1`] = `
[
  "  -- error: not a procedure
DROP PROCEDURE nonexistent()",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objname": [
                    {
                      "String": {
                        "sval": "nonexistent",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_PROCEDURE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 226 1`] = `
[
  "  -- error
RESET ROLE",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "kind": "VAR_RESET",
            "name": "role",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 239 1`] = `
[
  "ALTER ROUTINE ptest1(text) RENAME TO ptest1a",
  {
    "stmts": [
      {
        "stmt": {
          "RenameStmt": {
            "behavior": "DROP_RESTRICT",
            "newname": "ptest1a",
            "object": {
              "ObjectWithArgs": {
                "objargs": [
                  {
                    "TypeName": {
                      "location": 21,
                      "names": [
                        {
                          "String": {
                            "sval": "text",
                          },
                        },
                      ],
                      "typemod": -1,
                    },
                  },
                ],
                "objfuncargs": [
                  {
                    "FunctionParameter": {
                      "argType": {
                        "location": 21,
                        "names": [
                          {
                            "String": {
                              "sval": "text",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                      "mode": "FUNC_PARAM_DEFAULT",
                    },
                  },
                ],
                "objname": [
                  {
                    "String": {
                      "sval": "ptest1",
                    },
                  },
                ],
              },
            },
            "relationType": "OBJECT_ACCESS_METHOD",
            "renameType": "OBJECT_ROUTINE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 242 1`] = `
[
  "DROP ROUTINE cp_testfunc1(int)",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "ObjectWithArgs": {
                  "objargs": [
                    {
                      "TypeName": {
                        "location": 26,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  ],
                  "objfuncargs": [
                    {
                      "FunctionParameter": {
                        "argType": {
                          "location": 26,
                          "names": [
                            {
                              "String": {
                                "sval": "pg_catalog",
                              },
                            },
                            {
                              "String": {
                                "sval": "int4",
                              },
                            },
                          ],
                          "typemod": -1,
                        },
                        "mode": "FUNC_PARAM_DEFAULT",
                      },
                    },
                  ],
                  "objname": [
                    {
                      "String": {
                        "sval": "cp_testfunc1",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_ROUTINE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 251 1`] = `
[
  "DROP TABLE cp_test",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "cp_test",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`create_procedure.sql > line 253 1`] = `
[
  "DROP USER regress_cp_user1",
  {
    "stmts": [
      {
        "stmt": {
          "DropRoleStmt": {
            "roles": [
              {
                "RoleSpec": {
                  "location": 10,
                  "rolename": "regress_cp_user1",
                  "roletype": "ROLESPEC_CSTRING",
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
